# ai_controlled_robotics

./: README.md
catkin_ws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
catkin_ws/devel/lib/camera_node_pkg/: camera_node.py
catkin_ws/devel/lib/darknet_ros/: darknet_ros
catkin_ws/devel/lib/depthimage_to_laserscan/: depthimage_to_laserscan
catkin_ws/devel/lib/ecl_containers/: demo_container_formatters
catkin_ws/devel/lib/ecl_converters/: demo_float_converters
catkin_ws/devel/lib/ecl_core_apps/: bench_containers  bench_eigen3_decompositions  bench_eigen3_inverse  bench_eigen3_transforms  bench_exceptions  bench_files  bench_flops  bench_snooze  bench_streams  bench_string_conversions  ecl_hex  ecl_process_statistics  ecl_serial  ecl_socket_client  ecl_socket_server
catkin_ws/devel/lib/ecl_devices/: demo_serial_timeouts
catkin_ws/devel/lib/ecl_errors/: ecl_demo_errors
catkin_ws/devel/lib/ecl_exceptions/: demo_exceptions
catkin_ws/devel/lib/ecl_formatters/: demo_formatters
catkin_ws/devel/lib/ecl_io/: ecl_demo_poll  ecl_demo_socketpair  ecl_demo_sockets
catkin_ws/install/: .rosinstall  local_setup.sh  setup.sh
catkin_ws/src/camera_node_pkg/: CMakeLists.txt
catkin_ws/src/camera_node_pkg/scripts/: camera_node.py  camera_node_1.py  camera_node_2.py
catkin_ws/src/camera_publisher/: CMakeLists.txt
unity_projects/ros_scene/Assets/: SampleScene.unity  msgbrowser_settings.asset
unity_projects/ros_scene/ProjectSettings/: ProjectSettings.asset  TagManager.asset
unity_projects/ros_scene/Temp/: workerlic
(+354 files in other folders)
